# site

./: Cargo.toml  hugo.toml  hugo_stats.json  package-lock.json  package.json  postcss.config.js  tailwind.config.js
asset/.well-known/appspecific/: com.tesla.3p.public-key.pem
assets/css/: orbit.css
content/: _index.md
content/blog/: _index.md
content/posts/: test.md
content/projects/: _index.md
content/projects/archer/: _index.md
content/projects/florence/: _index.md
front/: Cargo.toml
front/src/: lib.rs
front/src/evcharge/: mod.rs
hydrated/: Cargo.toml
hydrated/src/: lib.rs
layouts/: baseof.html  index.html
layouts/_default/: baseof.html  single.html
layouts/_default/_markup/: render-image.html
layouts/blog/: section.html
layouts/partials/: header.html  style.html
layouts/projects/: list.html  section.html
public/: index.html  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/css/: main.css  main.min.css  tachyons.min.css
public/posts/: index.html  index.xml
public/posts/post-1/: index.html
public/posts/post-2/: index.html
public/posts/post-3/: index.html
public/posts/test/: index.html
public/tags/: index.html  index.xml
public/tags/blue/: index.html  index.xml
public/tags/green/: index.html  index.xml
public/tags/red/: index.html  index.xml
server/: Cargo.toml
server/src/: main.rs
site-back/: Cargo.toml
site-back/src/: main.rs
site-front/: Cargo.toml
site-shared/: Cargo.toml
src/: lib.rs  main.rs
src/front/: icon.rs  mod.rs
src/front/embed/: github.path.txt  hamburger.path.txt
src/front/embed/projects/: teslacharge.path.txt
src/front/projects/: mod.rs
