[workspace]
resolver = "2"
members = [
    "front",
    "hydrated",
    "server",
]


# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
leptos = { version = "0.5" }
leptos_meta = "0.5"
leptos_router = "0.5"
leptos_axum = "0.5"

tokio = { version = "1.34", features = ["rt-multi-thread"] }
tower = { version = "0.4", features = ["tokio", "reconnect", "retry"] }
tower-http = { version = "0.4", features = ["fs"] }
axum = "0.6"

cfg-if = "1"
http = "0.2"
log = "0.4"
thiserror = "1.0"

wasm-bindgen = "=0.2.89"

# A leptos project defines which workspace members
# that are used together frontend (lib) & server (bin)
[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "bkl-dev"

bin-package = "server"
lib-package = "hydrated"

site-root = "target/site"

site-pkg-dir = "dist"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"

assets-dir = "asset"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:9115"

# The port to use for automatic reload monitoring
reload-port = 3001

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
