[package]
name = "bkl-dev-site"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
leptos = { version = "0.5" }
leptos_meta = "0.5"
leptos_router = "0.5"
leptos_axum = { version = "0.5", optional = true }
tracing = "0.1"

tokio = { version = "1.34", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.4", features = ["tokio", "reconnect", "retry"], optional = true }
tower-http = { version = "0.4", features = ["fs", "compression-gzip"], optional = true }
axum = { version = "0.6", features = ["http2"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

cfg-if = "1"
http = "0.2"
log = "0.4"
thiserror = "1.0"

wasm-bindgen = "=0.2.89"

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:reqwest", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]

# A leptos project defines which workspace members
# that are used together frontend (lib) & server (bin)
[package.metadata.leptos]
# this name is used for the wasm, js and css file names
output-name = "bkl-dev"

site-root = "target/site"

site-pkg-dir = "dist"

tailwind-input-file = "./style/main.css"
tailwind-config-file = "./tailwind.config.js"

assets-dir = "asset"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:9115"

# The port to use for automatic reload monitoring
reload-port = 3001

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

bin-features = ["ssr"]

lib-features = ["hydrate"]

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
