[package]
name = "hydrated"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
front = { path = "../front", default-features = false, features = ["hydrate"] }
leptos = { workspace = true, features = ["hydrate"] }

log.workspace = true
wasm-bindgen.workspace = true
