[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
front = { path = "../front", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
